<?xml version="1.0"?>
<package format="2">
  <name>track_robot_description</name>
  <version>0.0.0</version>
  <description>The track_robot_description package</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>BSD</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
</package>
